--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run clean && npm run imagemin && npm run copyfonts && npm run copydata && npm run usemin",
     "clean": "rimraf dist",
     "copyfonts": "copyfiles -f node_modules/font-awesome/fonts/* dist/fonts",
-    "copydata": "copyfiles -f src/* dist/src",
+    "copydata": "copyfiles -f src/js/* dist/js",
     "imagemin": "imagemin src/img/* -o dist/img",
     "lite": "lite-server",
     "start": "npm run lite",
