--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "Rachel Brown",
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "bootstrap": "^4.4.1",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
